--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -12,8 +12,8 @@
                         <img src="http://www.specplast.com.br/assets/img/sample/woocommerce/img/logo/1.png" class="logo" alt="fake logo">
                         <nav><a class="has-border">Resume</a>
                           <a class="has-border">About Me</a>
-                          <a href="./src/blog.html> 
-                          <a class="has-border">My Blog</a>
+                        
+                          <a class="has-border" href="src/blogclass.html">My Blog</a>
                           <a class="has-border">Contact Me</a></nav>
                 </header>
                 <main><img src="./myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
