--- a/myPortfolio/src/resume.html
+++ b/myPortfolio/src/resume.html
@@ -1,29 +1,32 @@
-!DOCTYPE <HTml>
+<!DOCTYPE html>
 <head>
-    <header>
+    <link rel="stylesheet" href="resume.css">
+   <header>Resume</header>
         <title>
-            Your Name's Resume
+            Resume
         </title>
+        <H1>Elon Musk</H1>
         <h3>Hollywood, California</h3>
         <h3>555-555-5555</h3>
        <H3> sample@resume.com</H3>
-    </header>
-</head>
-<body>
-    <h1><title></title>Profetional Summary</title>
-        Donec elementum quam sed ipsum consectetur, id interdum quam finibus. Nulla id ante pellentesque, fringilla velit venenatis, finibus enim. Vestibulum in magna quis metus ultricies semper. Nulla sem metus, dapibus id augue et, efficitur porta felis. In hac habitasse platea dictumst. Curabitur auctor ex sed velit malesuada, non molestie odio mattis. Donec tristique, velit vitae tincidunt cursus, elit odio accumsan justo, id hendrerit tortor massa eget orci.
-    </h1>
-    <h1></h1><title>Education</title>
-        Vivamus eu efficitur dolor. Maecenas iaculis odio in eros commodo, id mattis quam tincidunt. Praesent convallis tincidunt lectus, eget lobortis enim cursus sed. Nunc id ultrices lorem. Morbi nec interdum ex. Duis vel nunc non arcu faucibus viverra. Integer scelerisque quam tortor, vel lobortis metus ultrices quis. Morbi eu metus nec ligula laoreet posuere. Praesent cursus erat molestie elit egestas vehicula.
-    </h1>
-    <h1><title>Qualafications</title>
-        Pellentesque egestas dolor vel ligula elementum aliquet. Vestibulum malesuada cursus diam a lacinia. Quisque eget feugiat est. Sed suscipit quam eget augue tristique vulputate. Ut purus magna, elementum ut metus at, malesuada placerat nisi. Quisque vitae libero iaculis, mollis justo eu, elementum justo. Nulla sed quam erat. Nullam dignissim nibh vitae sollicitudin molestie. Sed pharetra sapien purus, rhoncus tincidunt ligula dictum sit amet. Mauris sit amet arcu eget lacus lacinia cursus sed et ipsum.
-    </h1>
-    <h1>
-        <title>Cirtifications</title>Quisque hendrerit diam ut ex hendrerit lobortis. Vestibulum placerat sit amet lacus sit amet porttitor. Cras non ligula sollicitudin, porttitor erat sed, suscipit urna. Sed in massa quis ante tempor varius a sit amet dolor. Integer efficitur erat ligula, iaculis dignissim lorem rutrum at. Mauris congue tincidunt lacus nec commodo. Sed vehicula tellus ut leo euismod, eget viverra ex dictum.
-    </h1>
-</body>
-<footer>
 
+<body>
+       <h3>
+       <p>
+        <title>Profetional Summary</title>
+        Donec elementum quam sed ipsum consectetur, id interdum quam finibus. Nulla id ante pellentesque, fringilla velit venenatis, finibus enim. Vestibulum in magna quis metus ultricies semper. Nulla sem metus, dapibus id augue et, efficitur porta felis. In hac habitasse platea dictumst. Curabitur auctor ex sed velit malesuada, non molestie odio mattis. Donec tristique, velit vitae tincidunt cursus, elit odio accumsan justo, id hendrerit tortor massa eget orci.</p>
+     <p>
+        <title>Education</title>
+        Vivamus eu efficitur dolor. Maecenas iaculis odio in eros commodo, id mattis quam tincidunt. Praesent convallis tincidunt lectus, eget lobortis enim cursus sed. Nunc id ultrices lorem. Morbi nec interdum ex. Duis vel nunc non arcu faucibus viverra. Integer scelerisque quam tortor, vel lobortis metus ultrices quis. Morbi eu metus nec ligula laoreet posuere. Praesent cursus erat molestie elit egestas vehicula.</p>
+        <p>
+        <title>Qualafications</title>
+        Pellentesque egestas dolor vel ligula elementum aliquet. Vestibulum malesuada cursus diam a lacinia. Quisque eget feugiat est. Sed suscipit quam eget augue tristique vulputate. Ut purus magna, elementum ut metus at, malesuada placerat nisi. Quisque vitae libero iaculis, mollis justo eu, elementum justo. Nulla sed quam erat. Nullam dignissim nibh vitae sollicitudin molestie. Sed pharetra sapien purus, rhoncus tincidunt ligula dictum sit amet. Mauris sit amet arcu eget lacus lacinia cursus sed et ipsum.
+       <P> 
+        <title>Cirtifications</title>Quisque hendrerit diam ut ex hendrerit lobortis. Vestibulum placerat sit amet lacus sit amet porttitor. Cras non ligula sollicitudin, porttitor erat sed, suscipit urna. Sed in massa quis ante tempor varius a sit amet dolor. Integer efficitur erat ligula, iaculis dignissim lorem rutrum at. Mauris congue tincidunt lacus nec commodo. Sed vehicula tellus ut leo euismod, eget viverra ex dictum.
+    </h3>
+</body>
+</head>
+<footer>
+resume
 </footer>
 </HTml>
