--- a/myPortfolio/src/resume.html
+++ b/myPortfolio/src/resume.html
@@ -20,7 +20,7 @@
         <h2>Qualafications</h2>
         <p>
         Pellentesque egestas dolor vel ligula elementum aliquet. Vestibulum malesuada cursus diam a lacinia. Quisque eget feugiat est. Sed suscipit quam eget augue tristique vulputate. Ut purus magna, elementum ut metus at, malesuada placerat nisi. Quisque vitae libero iaculis, mollis justo eu, elementum justo. Nulla sed quam erat. Nullam dignissim nibh vitae sollicitudin molestie. Sed pharetra sapien purus, rhoncus tincidunt ligula dictum sit amet. Mauris sit amet arcu eget lacus lacinia cursus sed et ipsum.
-       <h2>Cirtifications></h2>
+       <h2>Cirtifications</h2>
         <P> Quisque hendrerit diam ut ex hendrerit lobortis. Vestibulum placerat sit amet lacus sit amet porttitor. Cras non ligula sollicitudin, porttitor erat sed, suscipit urna. Sed in massa quis ante tempor varius a sit amet dolor. Integer efficitur erat ligula, iaculis dignissim lorem rutrum at. Mauris congue tincidunt lacus nec commodo. Sed vehicula tellus ut leo euismod, eget viverra ex dictum.
     </h3>
 </body>
