--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -20,7 +20,7 @@
                 <main><img src="./myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
                   <h1>Melinda Marino</h1>
                   <h2>Student of Web Development</h2>
-                  <button id="portfolio">Portfolio</button>
+                  <button id="portfolio"><a href="./src/portfolio.html">Portfolio</a></button>
                 </main>
   </body>
 </html>
