--- a/myPortfolio/src/dashboard.html
+++ b/myPortfolio/src/dashboard.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <header>Good Evening</header>
+        
     </head>
     <link rel="stylesheet" href="dashboard-style.css">
   
     <body>
+      <div id="bg">
+        <img src="./img/france.jpg" alt="">
+      </div>
+      <h1>Good Morning</h1>
         <main>
             <div class="grid"></div>
             <div class="Greeting"></div>
