--- a/myPortfolio/src/dashboard.html
+++ b/myPortfolio/src/dashboard.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+
     </head>
     <link rel="stylesheet" href="dashboard-style.css">
   
     <body>
       <div id="bg">
-        <img src="./img/france.jpg" alt="">
       </div>
       <h1>Good Morning</h1>
+     <div class=clock>
+      <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+      <div style="text-align:center;padding:1em 0;"> <h4><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/city/5525577"><span style="color:rgb(63, 63, 63);"></h4> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=small&timezone=America%2FChicago" width="100%" height="90" frameborder="0" seamless></iframe> </div></div>
         <main>
             <div class="grid"></div>
             <div class="Greeting"></div>
