--- a/myPortfolio/src/hair.html
+++ b/myPortfolio/src/hair.html
@@ -26,11 +26,8 @@
 </ul>
 </div>
 <div id="body">
-    <div id="feature"></div>
-        <img src="./img/walking.jpg" alt=""></img>
-        </div>
         <div>
-                <h2>Te beacon to all mankind</h2>
+                <h2>Want a new look?</h2>
                 <span>Our website templates are created with</span>
                 <span>inspiration, checked for quality and originality</span>
                 <span>and meticulously sliced and coded.</span>
