--- a/myPortfolio/src/resume.html
+++ b/myPortfolio/src/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="../styles/resume.css">
    <header>Resume</header>
         <title>
             Resume
