--- a/myPortfolio/src/dashboard.html
+++ b/myPortfolio/src/dashboard.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+<title>Dashboard</title>
     </head>
-    <link rel="stylesheet" href="dashboard-style.css">
+    <link rel="stylesheet" href="../styles/dashboard-style.css">
   
     <body>
       <div id="bg">
