--- a/myPortfolio/src/index.html
+++ b/myPortfolio/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>My Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -17,7 +17,7 @@
                           <a class="has-border" href="src/blogclass.html">My Blog</a>
                           <a class="has-border">Contact Me</a></nav>
                 </header>
-                <main><img src="./myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
+                <main><img src="./img/myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
                   <h1>Melinda Marino</h1>
                   <h2>Student of Web Development</h2>
                   <button id="portfolio"><a href="./src/portfolio.html">Portfolio</a></button>
