--- a/myPortfolio/src/blogclass.html
+++ b/myPortfolio/src/blogclass.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My Blog</title>
-        <link rel="stylesheet" href="../styles/blogclass.css">
+        <link rel="stylesheet" href="./styles/blogclass.css">
     </head>
     <body>
         <header>
