--- a/myPortfolio/src/dashboard.html
+++ b/myPortfolio/src/dashboard.html
@@ -3,7 +3,7 @@
     <head>
 <title>Dashboard</title>
     </head>
-    <link rel="stylesheet" href="../styles/dashboard-style.css">
+    <link rel="stylesheet" href="./styles/dashboard-style.css">
   
     <body>
       <div id="bg">
