--- a/myPortfolio/src/hair.html
+++ b/myPortfolio/src/hair.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="../styles/hair.css">
+    <link rel="stylesheet" href="./styles/hair.css">
     <header>
         Hair 4 You
     </header>
@@ -36,7 +36,7 @@
         <ul>
             <li>
                 <a href=""></a>
-                <img src="../img/long-hair.jpg" alt="">
+                <img src="./img/long-hair.jpg" alt="">
                 <span>
                    long hair
                 </span>
@@ -45,7 +45,7 @@
         <ul>
                 <li>
                     <a href=""></a>
-                    <img src="../img/short-hair.jpg" alt="">
+                    <img src="./img/short-hair.jpg" alt="">
                     <span>
                     short hair
                     </span>
@@ -54,7 +54,7 @@
             <ul>
                     <li>
                         <a href=""></a>
-                        <img src="../img/kids-hair.jpg" alt="">
+                        <img src="./img/kids-hair.jpg" alt="">
                         <span>
                     kids hair
                         </span>
