--- a/myPortfolio/src/index.html
+++ b/myPortfolio/src/index.html
@@ -14,13 +14,13 @@
                         <nav><a class="has-border">Resume</a>
                           <a class="has-border">About Me</a>
                         
-                          <a class="has-border" href="src/blogclass.html">My Blog</a>
+                          <a class="has-border" href="../src/blogclass.html">My Blog</a>
                           <a class="has-border">Contact Me</a></nav>
                 </header>
                 <main><img src="./img/myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
                   <h1>Melinda Marino</h1>
                   <h2>Student of Web Development</h2>
-                  <button id="portfolio"><a href="./src/portfolio.html">Portfolio</a></button>
+                  <button id="portfolio"><a href="../src/portfolio.html">Portfolio</a></button>
                 </main>
   </body>
 </html>
