--- a/myPortfolio/src/nasa.html
+++ b/myPortfolio/src/nasa.html
@@ -2,7 +2,7 @@
     <html><head>
             <meta charset="utf-8">
             <title>nasa</title> 
-            <link rel="stylesheet" href="/styles/nasa.css">
+            <link rel="stylesheet" href="../src/styles/nasa.css">
             <link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet">
     </head>
     <body>
