--- a/myPortfolio/src/dashboard.html
+++ b/myPortfolio/src/dashboard.html
@@ -9,6 +9,7 @@
       <div id="bg">
       </div>
       <h1>Good Morning</h1>
+      <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
         <main>
             <div class="grid"></div>
             <div class="Greeting"></div>
