--- a/myPortfolio/src/hair.html
+++ b/myPortfolio/src/hair.html
@@ -28,14 +28,13 @@
 <div id="body">
         <div>
                 <h2>Want a new look?</h2>
-                <span>Our website templates are created with</span>
-                <span>inspiration, checked for quality and originality</span>
-                <span>and meticulously sliced and coded.</span>
+                <span>Check out what our salon has to offer you.</span>
+                <span>We have many stylists who can help you find the best look for you!</span>
+
               <a href="" class="more">READ MORE</a>        
         </div>
         <ul>
             <li>
-                <a href=""></a>
                 <img src="./img/long-hair.jpg" alt="">
                 <span>
                    long hair
@@ -44,7 +43,6 @@
         </ul>
         <ul>
                 <li>
-                    <a href=""></a>
                     <img src="./img/short-hair.jpg" alt="">
                     <span>
                     short hair
@@ -53,7 +51,6 @@
             </ul>
             <ul>
                     <li>
-                        <a href=""></a>
                         <img src="./img/kids-hair.jpg" alt="">
                         <span>
                     kids hair
