--- a/myPortfolio/src/portfolio.html
+++ b/myPortfolio/src/portfolio.html
@@ -1,4 +1,35 @@
 <html>
-        <a href="dashboard.html">dashboard</a>
+        <head>
+        <link rel="stylesheet" href="./styles/portfolio.css">
+        <header>
+        Portfolio
+        </header>
+        </head>
+        <body>
+        <a href="dashboard.html">Dashboard</a>
+        <a href="hair.html">Salon</a>
+        <a href="resume.html">Resume</a>
+        <a href="nasa.html">NASA</a>
+        <div class="iframe-container">
+                <iframe src="https://www.youtube.com/embed/y69gQtAdHKc?vq=hd1080&autoplay=1&rel=0&color=white" width="560" height="315" frameborder="0"></iframe>
+                <form>
+                        <input type="text" name="email" id="email" title="email" required>
+                        <input type="text"  title="name" name="name" id="name" required>
+                        <input type="text" name="location" id="location" title="location" required>
+                        <input type="text" name="message" id="message" title="message" required>
+                        <input type="submit" value="Submit">  // a button that says: "Submit"
+                        <input type="reset" value="Reset">    // a button that says: "Reset"
+                      </form>
+                        <!--<video controls width="250">
 
+                                <source src="/media/examples/flower.webm"
+                                        type="video/webm">
+                            
+                                <source src="/media/examples/flower.mp4"
+                                        type="video/mp4">
+                            
+                                  <p>Your browser doesn't support HTML5 video. Here is
+                                 a <a href="https://www.myVideo.com">link to the video</a> instead.</p>
+                            </video>-->
+        </body>
 </html>
