--- a/myPortfolio/src/hair.html
+++ b/myPortfolio/src/hair.html
@@ -24,15 +24,16 @@
             <a href="">CONTACT</a>
     </li>
 </ul>
+<div class ="text">
+    <h2>Want a new look?</h2>
+    <span>Check out what our salon has to offer you.</span>
+    <span>We have many stylists who can help you find the best look for you!</span>
+
+  <a href="" class="more">READ MORE</a>        
+</div>
 </div>
 <div id="body">
-        <div>
-                <h2>Want a new look?</h2>
-                <span>Check out what our salon has to offer you.</span>
-                <span>We have many stylists who can help you find the best look for you!</span>
-
-              <a href="" class="more">READ MORE</a>        
-        </div>
+        <div class=" longhair">
         <ul>
             <li>
                 <img src="./img/long-hair.jpg" alt="">
@@ -41,6 +42,8 @@
                 </span>
             </li>
         </ul>
+        </div>
+        <Div class="shorthair">
         <ul>
                 <li>
                     <img src="./img/short-hair.jpg" alt="">
@@ -49,6 +52,8 @@
                     </span>
                 </li>
             </ul>
+        </Div>
+        <Div class="kidshair">
             <ul>
                     <li>
                         <img src="./img/kids-hair.jpg" alt="">
@@ -57,6 +62,7 @@
                         </span>
                     </li>
                 </ul>
+            </Div>
         
 </div>
 </body>
