--- a/myPortfolio/src/about.html
+++ b/myPortfolio/src/about.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./styles/about.css">
         <header>
             About 
             <h1>Melinda Marino</h1>
         </header>
     </head>
     <body>
+            <div class="top">
+        <h1>
+                    summery
+                </h1>
+              <p>
+                     Sapien faucibus et molestie ac feugiat sed lectus vestibulum. Odio pellentesque diam volutpat commodo. Eget dolor morbi non arcu risus quis varius. Sed id semper risus in hendrerit gravida rutrum quisque. Viverra aliquet eget sit amet tellus cras adipiscing enim. Iaculis nunc sed augue lacus. Pretium quam vulputate dignissim suspendisse. Suscipit tellus mauris a diam maecenas sed enim ut sem. Suspendisse interdum consectetur libero id. Odio facilisis mauris sit amet massa vitae.
+              </p>
+            </div>
+
         <main>
-            
+            <div class= "p1">
+               <h1>
+                   Part 1
+               </h1>
+             <p>
+                    Sapien faucibus et molestie ac feugiat sed lectus vestibulum. Odio pellentesque diam volutpat commodo. Eget dolor morbi non arcu risus quis varius. Sed id semper risus in hendrerit gravida rutrum quisque. Viverra aliquet eget sit amet tellus cras adipiscing enim. Iaculis nunc sed augue lacus. Pretium quam vulputate dignissim suspendisse. Suscipit tellus mauris a diam maecenas sed enim ut sem. Suspendisse interdum consectetur libero id. Odio facilisis mauris sit amet massa vitae.
+             </p>
+            </div>
+             <div class= "p2">
+                 <h1>
+                     Part 2
+                 </h1>
+                <p>
+                        Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat. Sit amet cursus sit amet dictum sit. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Nullam ac tortor vitae purus. Cursus euismod quis viverra nibh cras pulvinar mattis nunc.
+                </p>
+            </div>
+            <div class= "p3">
+                <h1>
+                    Part 3
+                </h1>
+                <p>
+                        In fermentum et sollicitudin ac orci. Netus et malesuada fames ac turpis egestas integer eget aliquet. Diam quis enim lobortis scelerisque. Faucibus et molestie ac feugiat sed. Dignissim sodales ut eu sem integer vitae. Sed elementum tempus egestas sed sed risus pretium quam. Massa id neque aliquam vestibulum morbi blandit cursus risus. Blandit turpis cursus in hac habitasse platea. Eu feugiat pretium nibh ipsum consequat nisl vel.
+                </p>
+                </div>
 
         </main>
     </body>
