--- a/myPortfolio/src/contact.html
+++ b/myPortfolio/src/contact.html
@@ -8,8 +8,26 @@
     </head>
     <body>
         <main>
+       <div class="name">
+            <h2>Name:</h2>
+        <p>Melinda Marino</p>
+    </div>
+    <div class="company">
+            <h2>Company:</h2>
+        <p>Blank</p>
+    </div> 
+    <div class="phone">
+            <h2>Phone Number:</h2>
+        <p>(000)000-0000</p>
+    </div>
+    <div class="email">
+            <h2>Email:</h2>
+        <p>email@.com</p>
+    </div>
+    <div class="message">
+            <input type="text" name="message" id="message" title="message" required placeholder="message..." class="addBtn">Send Message</span>
             
-
+    </div>
         </main>
     </body>
 </html>
