--- a/myPortfolio/src/index.html
+++ b/myPortfolio/src/index.html
@@ -7,20 +7,23 @@
   <link rel="stylesheet" href="./styles/style.css">
   <title>My Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
   <body>
                 <header>
                         <img src="http://www.specplast.com.br/assets/img/sample/woocommerce/img/logo/1.png" class="logo" alt="fake logo">
+<div class= " animated bounce">
                         <nav><a class="has-border">Resume</a>
                           <a class="has-border">About Me</a>
                         
                           <a class="has-border" href="../src/blogclass.html">My Blog</a>
-                          <a class="has-border">Contact Me</a></nav>
+                          <a class="has-border">Contact Me</a></nav></div>
                 </header>
-                <main><img src="./img/myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
+                <main>
+                  <img class=" animated pulse" src="./img/myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
                   <h1>Melinda Marino</h1>
-                  <h2>Student of Web Development</h2>
-                  <button id="portfolio"><a href="../src/portfolio.html">Portfolio</a></button>
+                  <h2 class ="animated flipInX">Student of Web Development</h2>
+                <button id="portfolio"><a href="../src/portfolio.html">Portfolio</a></button>
                 </main>
   </body>
 </html>
