--- a/myPortfolio/src/portfolio.html
+++ b/myPortfolio/src/portfolio.html
@@ -13,10 +13,10 @@
         <div class="iframe-container">
                 <iframe src="https://www.youtube.com/embed/y69gQtAdHKc?vq=hd1080&autoplay=1&rel=0&color=white" width="560" height="315" frameborder="0"></iframe>
                 <form>
-                        <input type="text" name="email" id="email" title="email" required>
-                        <input type="text"  title="name" name="name" id="name" required>
-                        <input type="text" name="location" id="location" title="location" required>
-                        <input type="text" name="message" id="message" title="message" required>
+                        <input type="text" name="email" id="email" title="email" required placeholder="Email...">
+                        <input type="text"  title="name" name="name" id="name" required placeholder="Name...">
+                        <input type="text" name="location" id="location" title="location" required placeholder="Location...">
+                        <input type="text" name="message" id="message" title="message" required placeholder="Message...">
                         <input type="submit" value="Submit">  // a button that says: "Submit"
                         <input type="reset" value="Reset">    // a button that says: "Reset"
                       </form>
