--- a/myPortfolio/src/portfolio.html
+++ b/myPortfolio/src/portfolio.html
@@ -10,6 +10,10 @@
         <a href="hair.html">Salon</a>
         <a href="resume.html">Resume</a>
         <a href="nasa.html">NASA</a>
+        <a href="moving-squares.html">Squares</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+
         <div class="iframe-container">
                 <iframe src="https://www.youtube.com/embed/y69gQtAdHKc?vq=hd1080&autoplay=1&rel=0&color=white" width="560" height="315" frameborder="0"></iframe>
                 <form>
