--- a/myPortfolio/src/index.html
+++ b/myPortfolio/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
   <body>
+      <body onload="window.alert('Hi, this is my Webpage');">
                 <header>
                         <img src="http://www.specplast.com.br/assets/img/sample/woocommerce/img/logo/1.png" class="logo" alt="fake logo">
 <div class= " animated bounce">
