--- a/myPortfolio/src/dashboard.html
+++ b/myPortfolio/src/dashboard.html
@@ -100,6 +100,9 @@
         </ul>
         </div>
         </div>
+        <Div class="button">Find Tour Location</Div>
         </main>
+        <script src="jquery/jquery-3.4.1.js"></script>
+      <script src="js/todo.js"></script>
     </body>
 </html>
