--- a/myPortfolio/src/portfolio.html
+++ b/myPortfolio/src/portfolio.html
@@ -15,6 +15,7 @@
         <a href="moving-squares.html">Squares</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <a href="ticTacToe.html">Tic Tac Toe</a>
                         </div>
         <div class="iframe-container">
                 <iframe src="https://www.youtube.com/embed/y69gQtAdHKc?vq=hd1080&autoplay=1&rel=0&color=white" width="560" height="315" frameborder="0"></iframe>
