--- a/myPortfolio/src/dashboard.html
+++ b/myPortfolio/src/dashboard.html
@@ -102,11 +102,24 @@
         </ul>
       </div>
         <Div class="loca">
-          <p class="onclick"</p>
+          <p class="onclick"></p>
           </Div>
+         <div id="hanoi">
+          <div data-row class="red"></div>
+<div data-row class="yellow"></div>
+<div data-row class="green"></div>
+<div data-row class="blue"></div>
+<div data-row>
+  <div data-color="yellow"></div>
+  <div data-color="red"></div>
+  <div data-color="green"></div>
+  <div data-color="blue"></div>
+</div>
+</div>
         </main>
         <script src="../src/scripts/geolocate.js"></script>
         <script src="scripts/jquery-3.4.1.js"></script>
       <script src="./scripts/todo.js"></script>
+      <script src="../src/scripts/toh.js"></script>
     </body>
 </html>
