--- a/myPortfolio/src/bacon.landing.page.html
+++ b/myPortfolio/src/bacon.landing.page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./src/styles/bacon.landing.page.css">
+        <link rel="stylesheet" href="./styles/bacon.landing.page.css">
             <title>checkpoint2-BaconIpsum</title>
         <header>
        <H1>Welcome To Our Site</H1>
