--- a/myPortfolio/src/dashboard.html
+++ b/myPortfolio/src/dashboard.html
@@ -116,10 +116,22 @@
   <div data-color="blue"></div>
 </div>
 </div>
+<div id="board">
+  <div class="column"></div>
+  <div class="column"></div>
+  <div class="column">
+    <div class="disc red"></div>
+  </div>
+  <div class="column"></div>
+  <div class="column"></div>
+  <div class="column"></div>
+  <div class="column"></div>
+</div>
         </main>
         <script src="../src/scripts/geolocate.js"></script>
         <script src="scripts/jquery-3.4.1.js"></script>
       <script src="./scripts/todo.js"></script>
       <script src="../src/scripts/toh.js"></script>
+      <script src="./scripts/stress.js"></script>
     </body>
 </html>
