--- a/myPortfolio/src/bacon.landing.page.html
+++ b/myPortfolio/src/bacon.landing.page.html
@@ -3,12 +3,15 @@
     <head>
         <link rel="stylesheet" href="./styles/bacon.landing.page.css">
             <title>checkpoint2-BaconIpsum</title>
+            <a href="instagram.com">Instagram</a>
+<a href="facebook.com">Facebook</a>
+<a href="about.html">About</a>
+<a href="contact.html">Contact</a>
         <header>
        <H1>Welcome To Our Site</H1>
         </header>
     </head>
     <body>
-        
         <main>
           <div class="container1">
               <h2>title1</h2>
@@ -23,5 +26,6 @@
                     Sed magna metus, eleifend ut risus vel, mattis venenatis leo. Proin eget diam tellus. Suspendisse ligula leo, porta at fringilla vel, feugiat in eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec non nunc sem. Curabitur ac lorem eget elit fringilla aliquet. Nunc eu semper diam.
                 </div>
         </main>
+        <iframe src="https://www.youtube.com/watch?v=vI6OD4VJssM" frameborder="0"></iframe>
     </body>
 </html>
