bacon ipsum landing page

--- a/myPortfolio/src/bacon.landing.page.html
+++ b/myPortfolio/src/bacon.landing.page.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="./styles/bacon.landing.page.css">
             <title>checkpoint2-BaconIpsum</title>
             <a href="instagram.com">Instagram</a>
-<a href="facebook.com">Facebook</a>
+<a href="https://facebook.com">Facebook</a>
 <a href="about.html">About</a>
 <a href="contact.html">Contact</a>
         <header>
@@ -26,6 +26,8 @@
                     Sed magna metus, eleifend ut risus vel, mattis venenatis leo. Proin eget diam tellus. Suspendisse ligula leo, porta at fringilla vel, feugiat in eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec non nunc sem. Curabitur ac lorem eget elit fringilla aliquet. Nunc eu semper diam.
                 </div>
         </main>
-        <iframe src="https://www.youtube.com/watch?v=vI6OD4VJssM" frameborder="0"></iframe>
+        <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vI6OD4VJssM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     </body>
 </html>
