--- a/myPortfolio/src/portfolio.html
+++ b/myPortfolio/src/portfolio.html
@@ -16,6 +16,7 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="ticTacToe.html">Tic Tac Toe</a>
+        <a href="bacon.landing.page.html">Bacon Ipsum</a>
                         </div>
         <div class="iframe-container">
                 <iframe src="https://www.youtube.com/embed/y69gQtAdHKc?vq=hd1080&autoplay=1&rel=0&color=white" width="560" height="315" frameborder="0"></iframe>
