--- a/myPortfolio/src/bacon.landing.page.html
+++ b/myPortfolio/src/bacon.landing.page.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="./styles/bacon.landing.page.css">
             <title>checkpoint2-BaconIpsum</title>
-            <a href="instagram.com">Instagram</a>
+            <a href="https://www.instagram.com">Instagram</a>
 <a href="https://facebook.com">Facebook</a>
 <a href="about.html">About</a>
 <a href="contact.html">Contact</a>
