--- a/myPortfolio/src/index.html
+++ b/myPortfolio/src/index.html
@@ -10,15 +10,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
   <body>
-      <body onload="window.alert('Hi, this is my Webpage');">
+     <!--<body onload="window.alert('Hi, this is my Webpage');">-->
                 <header>
                         <img src="http://www.specplast.com.br/assets/img/sample/woocommerce/img/logo/1.png" class="logo" alt="fake logo">
 <div class= " animated bounce">
-                        <nav><a class="has-border">Resume</a>
-                          <a class="has-border">About Me</a>
+                        <nav><a class="has-border" href="../src/resume.html">Resume</a>
+                          <a class="has-border" href="../src/about.html">About Me</a>
                         
                           <a class="has-border" href="../src/blogclass.html">My Blog</a>
-                          <a class="has-border">Contact Me</a></nav></div>
+                          <a class="has-border" href="../src/contact.html">Contact Me</a></nav></div>
                 </header>
                 <main>
                   <img class=" animated pulse" src="./img/myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
